tests/paczka1/small_fuzzy/72224286.err
Error in line 4: 2MF5Qplqt A901 42,96
Error in line 8: D2MbsgJVUN A809 40,3
Error in line 12: A901 S931 32,2
